<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Strangers</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">Strangers</string>
	<string name="general_password">Mot de passe</string>
	<string name="general_username">Nom d\'utilisateur</string>
	<string name="general_connection">Connexion</string>
	<string name="inscription_firstname">Prénom</string>
	<string name="inscription_lastname">Nom</string>
	<string name="inscription_phone">Numéro de téléphone</string>
	<string name="inscription_submit">Créer</string>
	<string name="login_menu_newAccount">Nouveau compte</string>
	<string name="title_activity_inscription">Strangers: Inscription</string>
	<string name="title_activity_login">Strangers: Connexion</string>
	<string name="title_activity_number_search">Strangers: Recherche</string>
	<string name="search_button">Chercher</string>
	<string name="home_unregister">Déconnexion</string>
	<string name="home_new_mail_account">Ajouter un compte de messagerie</string>
	<string name="verif_password">Répéter mot de passe</string>
	<string name="numberSearch_menu_new_mail_account">Ajouter un compte de messagerie</string>
	<string name="add_mail">Ajouter</string>
	<string name="add_mail_host">Adresse du serveur de messagerie</string>
	<string name="add_mail_port">Port de connexion</string>
	<string name="add_mail_login">Nom d\'utilisateur</string>
	<string name="add_mail_password">Mot de passe</string>
	<string name="add_mail_description">Description du compte email</string>
	<string name="numberSearch_menu_delete_user">Supprimer l\'utilisateur</string>
	<string name="delete_user_message">Voulez vous vraiment supprimer votre compte utilisateur?</string>
	<string name="delete_user_title">Confirmation</string>
	<string name="confirm_delete">Supprimer</string>
	<string name="infirm_delete">Annuler</string>
	<string name="different_passwords">Les mots de passes doivent être identiques</string>
	<string name="user_creation_error">Erreur lors de la création du compte</string>
	<string name="user_creation_process">Création du compte utilisateur...</string>
	<string name="user_deletion_process">Suppression du compte...</string>
	<string name="user_deletion_accepted">Suppression de l\'utilisateur prise en compte</string>
	<string name="user_deletion_denied">Suppression de l\'utilisateur refusée</string>
	<string name="account_creation_error">Erreur lors de l\'ajout du compte mail</string>
	<string name="account_creation_process">Ajout du compte email</string>
	<string name="user_check_process">Vérification de l\'utilisateur</string>
	<string name="user_check_error">Erreur lors de la vérification de l\'utilisateur</string>
	<string name="user_login_denied">Nom d\'utilisateur ou mot de passe incorrect</string>
	<string name="add_mail_show_password">Afficher le mot de passe</string>
	<string name="numberSearch_menu_delete_account">Supprimer un compte de messagerie</string>
	<string name="delete_account_dialog_title">Veuillez sélectionner le compte à supprimer :</string>
	<string name="user_account_list_error">Impossible de récupérer la liste des comptes, ou bien aucun compte n\'est associé à cet utilisateur</string>
	<string name="confirm_delete_account_dialog_title">Confirmation</string>
	<string name="account_deletion_process">Suppression du compte de messagerie</string>
	<string name="account_deletion_accepted">Suppression du compte prise en compte</string>
	<string name="account_deletion_denied">Erreur lors de la suppression du compte</string>
	<string name="delete_account_message">Voulez-vous vraiment supprimer ce compte de messagerie ?</string>
	<string name="numberSearch_process">Recherche du numéro de téléphone en cours...</string>
	<string name="register_title_text">Pas de compte ?</string>
	<string name="register_button_text">Inscription</string>
	<string name="phone_number_text">Numéro de téléphone</string>

</resources>